[project]
name = "ai-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "chess>=1.11.2",
    "gradio>=5.0.0",
    "openai>=2.26.0",
    "openai-agents[litellm]>=0.11.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
